src/objects/CMIS_POP_Packing_label_Batch__c.object
<CustomObject>
    <description>CMIS POP Packing label Batch</description>
    <fields>
        <fullName>Address_1__c</fullName>
        <label>Address 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <label>Address 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_3__c</fullName>
        <label>Address 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Record_Type__c</fullName>
        <label>Address Record Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Airline_City_Code__c</fullName>
        <label>Airline City Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Airline_Name__c</fullName>
        <label>Airline Name</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Airline_Number__c</fullName>
        <label>Airline Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Airline_Packing_Group__c</fullName>
        <label>Airline Packing Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attention_To_Care_Of_Indicator__c</fullName>
        <label>Attention To/Care Of Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attn_To_Name__c</fullName>
        <label>Attn To Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Run_Date__c</fullName>
        <description>Storing Batch Run Date</description>
        <label>Batch Run Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Block_House_Number__c</fullName>
        <label>Block House Number</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Name__c</fullName>
        <label>Building Name</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_Code__c</fullName>
        <label>City Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_Name__c</fullName>
        <label>City Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Code__c</fullName>
        <label>Company Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Name__c</fullName>
        <label>Country Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division_Code__c</fullName>
        <label>Division Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>Account Id + Publication Code
* Unique per day</description>
        <label>External Id</label>
        <length>110</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fillers__c</fullName>
        <label>Fillers</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flight_Number_2__c</fullName>
        <label>Flight Number 2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flight_Number__c</fullName>
        <label>Flight Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flight_Schedule__c</fullName>
        <label>Flight Schedule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Freelist_Indicator__c</fullName>
        <label>Freelist Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_Number__c</fullName>
        <label>Level Number</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Code__c</fullName>
        <label>Location Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Agent__c</fullName>
        <label>Mailing Agent</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Normalized_View__c</fullName>
        <formula>RPAD(Publication_Code__c, 4, &apos;.&apos;) +
IF(LEN(TEXT(DAY(Publication_Issue_Date__c)))=1, &apos;0&apos; + TEXT(DAY(Publication_Issue_Date__c)), TEXT(DAY(Publication_Issue_Date__c))) + &apos;.&apos; +
IF(LEN(TEXT(MONTH(Publication_Issue_Date__c)))=1, &apos;0&apos; + TEXT(MONTH(Publication_Issue_Date__c)), TEXT(MONTH(Publication_Issue_Date__c))) + &apos;.&apos; +
IF(LEN(TEXT(YEAR(Publication_Issue_Date__c)))=1, &apos;0&apos; + TEXT(YEAR(Publication_Issue_Date__c)), TEXT(YEAR(Publication_Issue_Date__c))) +
LEFT(Vendor_Group__c,1) + 
RPAD(Mailing_Agent__c, 5, &apos;.&apos;) +
LPAD(TEXT(Total_Direct_Subscriptions__c), 9, &apos;.&apos;) +
LPAD(TEXT(Total_Sponsored_Copies__c), 9, &apos;.&apos;) +
RPAD(Fillers__c, 61)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Normalized View</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Packing_Group_Description__c</fullName>
        <label>Packing Group Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Zone__c</fullName>
        <label>Postal Zone</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publication_Code__c</fullName>
        <label>Publication Code</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publication_Issue_Date__c</fullName>
        <label>Publication Issue Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Recipient_Number__c</fullName>
        <label>Recipient Number</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_Code__c</fullName>
        <label>Section Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <label>Sequence Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Name__c</fullName>
        <label>Street Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Account_Number__c</fullName>
        <label>Subscriber Account Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Name__c</fullName>
        <label>Subscription Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription</label>
        <referenceTo>Zuora__Subscription__c</referenceTo>
        <relationshipLabel>CMIS POP Packing label Batchs</relationshipLabel>
        <relationshipName>CMIS_POP_Packing_label_Batchs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Direct_Subscriptions__c</fullName>
        <label>Total Direct Subscriptions</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Local_Freelist_Copies__c</fullName>
        <label>Total Local Freelist Copies</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Local_Subscription_Copies__c</fullName>
        <label>Total Local Subscription Copies</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Overseas_Freelist_Copies__c</fullName>
        <label>Total Overseas Freelist Copies</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Overseas_Subscription_Copies__c</fullName>
        <label>Total Overseas Subscription Copies</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Sponsored_Copies__c</fullName>
        <label>Total Sponsored Copies</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Number__c</fullName>
        <label>Unit Number</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Group__c</fullName>
        <label>Vendor Group</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>CMIS POP Packing label Batch</label>
    <nameField>
        <label>CMIS POP Packing label Batch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CMIS POP Packing label Batchs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>